--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -1,15 +1,60 @@
 #contact {
   display: flex;
+  /* flex-direction: row; */
   justify-content: center;
   align-items: center;
   height: 100%;
 }
+.contact-left {
+  width: 490px;
+  height: 800px;
+}
+.info-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 20;
+}
+.contact-right {
+  width: 800px;
+  height: 800px;
+}
 #contact-card {
   display: flex;
   flex-direction: row;
-  z-index: 1000;
-  width: fit-content;
+  /* z-index: 1000; */
+  /* width: fit-content; */
+}
+
+.contact-title {
+  text-align: center;
+  line-height: 1.35em;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 #contact-form {
-  background-color: aqua;
+  /* background-color: aqua; */
+}
+.contact-image {
+  width: 100%;
+  height: 110%;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+.input-field {
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid grey;
+  outline: 0;
+  font-size: 1.3rem;
+  color: white;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+.input-field:focus {
+  outline: none !important;
+  border: 1px solid black;
+  box-shadow: 0 0 10px #719ece;
 }
