--- a/resources/css/services.css
+++ b/resources/css/services.css
@@ -1,5 +1,5 @@
 #services {
-  height: 100%;
+  /* height: 100%; */
 }
 #services-container {
   display: flex;
@@ -9,8 +9,21 @@
 .service-card {
   display: flex;
   flex-direction: column;
+  padding: 20px 15px;
+  margin: 10;
+  box-shadow: inset 0 -1em 1em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+
+  height: 40rem;
 }
 .service-title {
   display: flex;
   justify-content: center;
+}
+.service-image {
+  margin: 10;
+  max-height: 1000px;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
