--- a/resources/css/welcome.css
+++ b/resources/css/welcome.css
@@ -1,11 +1,25 @@
 #welcome {
   display: flex;
+  /* flex-direction: column; */
   height: 50vh;
   justify-content: center;
   align-items: center;
   background-color: aquamarine;
   background-image: url("https://loveincorporated.blob.core.windows.net/contentimages/gallery/2389c1f4-1775-4a42-a0b5-126d3c7d6aa6-high-altitude-homes-for-sale-evergreen-co.jpg");
 }
+.welcome-text {
+  background-color: #0000009c;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 #welcome h1 {
   color: white;
 }
+#welcome p {
+  color: white;
+  font-size: 3.8rem;
+}
+/* #welcome:after {
+} */
