--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -8,17 +8,18 @@
 .contact-left {
   width: 490px;
   height: 800px;
+  /* padding-right: 30; */
 }
 .info-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 20;
 }
 .contact-right {
   width: 800px;
   height: 800px;
+  padding-left: 100px;
 }
 #contact-card {
   display: flex;
@@ -30,11 +31,11 @@
 .contact-title {
   text-align: center;
   line-height: 1.35em;
-  font-size: 40px;
+  font-size: 45px;
   text-transform: uppercase;
 }
-#contact-form {
-  /* background-color: aqua; */
+#contact-form label {
+  /* text-align: left; */
 }
 .contact-image {
   width: 100%;
@@ -56,5 +57,5 @@
 .input-field:focus {
   outline: none !important;
   border: 1px solid black;
-  box-shadow: 0 0 10px #719ece;
+  /* box-shadow: 0 0 10px #719ece; */
 }
