--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -5,7 +5,7 @@ header {
   width: 100%;
   /* height: 8vh; */
   /* position: fixed; */
-  background-color: white;
+  background-color: #fafafa;
 }
 
 .logo-img {
