--- a/resources/css/services.css
+++ b/resources/css/services.css
@@ -11,8 +11,7 @@
   flex-direction: column;
   padding: 20px 15px;
   margin: 10;
-  box-shadow: inset 0 -1em 1em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   height: 40rem;
 }
