--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -1,7 +1,10 @@
 * {
-  font-family: "Open Sans", sans-serif;
-
-  /* overflow: hidden; Hide scrollbars */
+  font-family: "Poppins", sans-serif;
+  // text-align: center;
+  // overflow: visible; /*Hide scrollbars */
+}
+label {
+  text-align: in;
 }
 $primary: #11998e;
 $secondary: #38ef7d;
@@ -14,6 +17,7 @@ body {
   height: 100%;
 }
 .home {
+  background-color: #fafafa;
   /* height: 100%; */
   /* display: flex;
   flex-direction: column; */
@@ -28,6 +32,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 #about-description {
@@ -36,11 +41,14 @@ body {
   align-items: center;
   flex-direction: column;
   width: 50%;
+  // text-align: center;
 }
 p,
 li {
   font-size: 18px;
-  font-family: "Noto Sans", sans-serif;
+  text-align: center;
+
+  // text-shadow: 1px 0px 0px #000;
 }
 
 a,
@@ -50,11 +58,27 @@ a:active {
   color: inherit;
   text-decoration: none;
 }
+a:hover,
+a:visited,
+a:active {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+}
 
 footer {
   background-color: black;
   display: flex;
+
   align-items: center;
   justify-content: center;
   color: white;
+  height: 3%;
+}
+footer p {
+  font-size: 15px;
+}
+h4 {
+  color: black;
+  font-size: 20px;
 }
