--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -4,10 +4,11 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  max-height: fit-content;
+  padding-bottom: 30;
+  margin: 10;
 }
 .contact-left {
-  width: 490px;
-  height: 800px;
   /* padding-right: 30; */
 }
 .info-section {
@@ -39,7 +40,7 @@
 }
 .contact-image {
   width: 100%;
-  height: 110%;
+  height: 100%;
   object-fit: cover;
   object-position: 50% 50%;
 }
@@ -58,4 +59,95 @@
   outline: none !important;
   border: 1px solid black;
   /* box-shadow: 0 0 10px #719ece; */
+}
+/* non landscape phone screen width */
+@media (max-width: 450px) {
+  #contact {
+    padding-bottom: 0;
+  }
+  .contact-image {
+  }
+  .contact-title {
+    text-align: center;
+    line-height: 1.35em;
+    font-size: 30px;
+    text-transform: uppercase;
+  }
+  .contact-right {
+    display: none;
+  }
+  .contact-image {
+    visibility: hidden;
+  }
+  .contact-left p {
+    font-size: 12px;
+    text-align: center;
+    /* text-shadow: 1px 0px 0px #000; */
+  }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  #contact {
+    flex-direction: column;
+    padding-bottom: 0;
+  }
+
+  .contact-left {
+    width: 100%;
+    padding-right: 0;
+    margin-bottom: 2rem;
+  }
+
+  .contact-right {
+    display: inherit;
+    width: 100%;
+    padding-left: 0;
+  }
+
+  /* .contact-image {
+    display: inherit;
+    height: 50%;
+  } */
+
+  #contact-card {
+    flex-direction: column;
+  }
+
+  #contact-form label {
+    text-align: center;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  #contact {
+    flex-direction: row;
+    padding-bottom: 2rem;
+    /* display: flex; */
+
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+  }
+
+  .contact-left {
+    width: 50%;
+    margin-right: 2rem;
+    margin-bottom: 0;
+  }
+
+  .contact-right {
+    width: 50%;
+    margin-left: 2rem;
+  }
+
+  #contact-card {
+    max-height: fit-content;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  form {
+  }
 }
