--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -21,7 +21,7 @@ header {
   width: 100%;
   background-color: #0c0c0c;
 }
-.header-phone-num {
+.header-info {
   color: white;
   margin: 10;
 }
@@ -40,4 +40,27 @@ header {
 .header-btn-container {
   margin: 10;
   /* padding: 5; */
+}
+/* phone screen width */
+@media (max-width: 450px) {
+  header h4 {
+    font-size: 10px;
+  }
+  .logo-img {
+    max-height: 60px;
+  }
+  .socials-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  header .fa {
+    display: none;
+  }
+  .header-info.phone {
+    display: none;
+  }
+}
+
+@media (min-width: 576px) {
 }
