--- a/resources/css/services.css
+++ b/resources/css/services.css
@@ -1,5 +1,5 @@
 #services {
-  /* height: 100%; */
+  height: fit-content;
 }
 #services-container {
   display: flex;
@@ -13,7 +13,7 @@
   margin: 10;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-  height: 40rem;
+  /* height: 40rem; */
 }
 .service-title {
   display: flex;
@@ -21,8 +21,31 @@
 }
 .service-image {
   margin: 10;
-  max-height: 1000px;
+  /* max-height: 1000px; */
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+/* phone screen width */
+@media (max-width: 450px) {
+  #services-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  /* .service-card.two {
+    display: none;
+  } */
+}
+
+@media (min-width: 576px) {
+  #services-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
+  #services {
+    margin-bottom: 100;
+  }
 }
